# employment-barage

./: CLAUDE.md  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs
api/src/db/: migrations.sql  mod.rs  repository.rs  sqlite.rs  sqlite_impl.rs  state.rs
api/src/models/: education.rs  experience.rs  job.rs  job_application.rs  mod.rs  profile.rs  project.rs  resume.rs  resume_analysis.rs  skill.rs  user.rs
api/src/services/: ai_service.rs  job_service.rs  mod.rs  profile_service.rs  resume_parser.rs  resume_service.rs
api/src/services/job_sources/: arbeitnow.rs  hn_who_is_hiring.rs  mod.rs  remotive.rs
desktop/: Cargo.toml  Dioxus.toml
desktop/src/: main.rs
mobile/: Cargo.toml
mobile/src/: main.rs
ui/: Cargo.toml
ui/src/: dashboard.rs  job_search.rs  lib.rs  profile.rs  resume_builder.rs  routes.rs  shared_navigation.rs  upload.rs
ui/src/components/: app.rs  dashboard.rs  echo.rs  hero.rs  mod.rs  navbar.rs  upload.rs
ui/src/views/: applications.rs  dashboard.rs  jobs.rs  mod.rs  profile.rs  resumes.rs
web/: Cargo.toml
web/src/: main.rs
web/src/views/: mod.rs
