[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
# Temporarily disabled to resolve getrandom conflicts
# sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }
# pdf-extract = "0.6"
# docx-rs = "0.4"
regex = "1.0"
mime = "0.3"
base64 = "0.21"
getrandom = { version = "0.2", features = ["js"] }

# Different tokio features for different targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
