[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.0"
mime = "0.3"
base64 = "0.21"
getrandom = { version = "0.2", features = ["js"] }
async-trait = "0.1"

# Server-side only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
