[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
api = { workspace = true }
dioxus-bootstrap = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
web-sys = { version = "0.3", features = ["File", "FileList", "FileReader", "Blob"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3"
tracing = "0.1"
getrandom = { version = "0.2", features = ["js"] }
