[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router", "web"] }
dioxus-bootstrap = "0.2.0"
ui = { workspace = true }
api = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server"]
